tests/baselines/reference/generatorOverloads2.errors.txt
generatorOverloads2.ts(2,13): error TS1221: Generators are not allowed in an ambient context.
generatorOverloads2.ts(3,13): error TS1221: Generators are not allowed in an ambient context.
generatorOverloads2.ts(4,13): error TS1221: Generators are not allowed in an ambient context.


==== generatorOverloads2.ts (3 errors) ====
    declare module M {
        function* f(s: string): Iterable<any>;
                ~
!!! error TS1221: Generators are not allowed in an ambient context.
        function* f(s: number): Iterable<any>;
                ~
!!! error TS1221: Generators are not allowed in an ambient context.
        function* f(s: any): Iterable<any>;
                ~
!!! error TS1221: Generators are not allowed in an ambient context.
    }